# xsar

./: .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README_dev.md  condarc.yml  environment.yml  pyproject.toml  requirements.txt  requirements_doc.txt  setup.py
.github/: build_matrix.py  build_matrix.sh  dynamic_actions.py
.github/actions/: dynamic_matrix.py
.github/actions/conda/: action.yml
.github/actions/xsar_install/: action.yml
.github/actions/xsar_test/: action.yml
.github/workflows/: README.md  check-gdal3.3-available.yml  ci.yaml  conda-feedstock-check.yml  generate-doc.yml  install-test.yml  mac-os-install-test.yml  publish.yml  ubuntu-install-test.yml  upstream-dev.yaml  windows-install-test.yml
ci/: install-upstream-dev.sh
ci/requirements/: docs.yaml  environment.yaml
docs/: Makefile  advanced_api.rst  basic_api.rst  conf.py  developper_api.rst  index.rst  install.rst  installing.rst  introduction.rst  uml.rst
docs/_static/css/: xsar.css
docs/examples/: intro.py  mask.ipynb  projections.ipynb  radarsat2.ipynb  rcm.ipynb  xsar.ipynb  xsar_advanced.ipynb  xsar_batch_datarmor.ipynb  xsar_multiple.ipynb  xsar_tops_slc.ipynb
docs/scripts/: conda_create_activate  conda_install_minimal  conda_install_minimal_scratch  conda_install_recommended  conda_setenv  git_install  pip_install
highlevel-checks/: check_s1_xsar_opendataset.py
src/: xsar.py
src/scripts/: compress_safe.py
src/xsar/: Sentinel1.py  __init__.py  base_dataset.py  base_meta.py  config.yml  ipython_backends.py  radarsat2_dataset.py  radarsat2_meta.py  raster_readers.py  rcm_dataset.py  rcm_meta.py  sentinel1_dataset.py  sentinel1_meta.py  sentinel1_xml_mappings.py  utils.py  xarray_backends.py  xml_parser.py  xsar.py
src/xsar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xsarlib/: __init__.py  utils.py
src/xsarlib/sentinel/: SentinelImage.py  SentinelMetadata.py  SentinelReader.py  SentinelReaderTest.py  __init__.py
test/: test_antimeridian.py  test_denoising.py  test_invalid_mask_geometries.py  test_opening.py  test_raster_readers.py  test_sar_lib.py  test_xsar.py
