[project]
name = "xsar"
requires-python = ">= 3.10"
license = {text = "MIT"}
description = "Python xarray library to use Level-1 GRD Synthetic Aperture Radar products"
readme = "README.md"
dependencies = [
   'GDAL',
    'dask[array]',
    'distributed',
    "xarray>=2024.10.0",
    'affine',
    'rasterio',
    'cartopy',
    'fiona',
    'pyproj',
    'numpy',
    'scipy',
    'shapely',
    'geopandas',
    'fsspec',
    'aiohttp',
    'pytz',
    'psutil',
    'jinja2',
    'rioxarray',
    'lxml'
]
keywords = [
    "xarray",
    "earth-observation",
    "remote-sensing",
    "satellite-imagery",
    "Sentinel-1",
    "RCM",
    "RadarSat2",
    "sar",
    "synthetic-aperture-radar",
    ]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/umr-lops/xsar.readthedocs.io"
documentation = "https://xsar.readthedocs.io"
repository = "https://github.com/umr-lops/xsar"
changelog = "https://xsar.readthedocs.io/en/latest/changelog.html"

[project.scripts]
ceos-alos2-create-cache = "ceos_alos2.sar_image.cli:main"
xarray.backends = "xsar.xarray_backends:XsarXarrayBackend"

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xsar"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "xsar"

[tool.black]
line-length = 100

[tool.coverage.run]
source = ["xsar"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
